<resources>
    <string name="app_name">B Challenge</string>
    <string name="total_finance"><b>Rp109.850</b></string>
    <string name="klik_finance"><b><![CDATA[Klik & cek riwayat]]></b></string>
    <string name="bayar_text">Bayar</string>
    <string name="explor_text">Eksplor</string>
    <string name="isi_saldo_text">Isi Saldo</string>
    <string name="goride">GoRide</string>
    <string name="gocar">GoCar</string>
    <string name="gofood">GoFood</string>
    <string name="gosend">GoSend</string>
    <string name="gomart_text">GoMart</string>
    <string name="gopulsa_text">GoPulsa</string>
    <string name="checkin_text">CheckIn</string>
    <string name="lainnya_text">Lainnya</string>
    <string name="goclub_xp_text">193 XP lagi ada harta karun</string>
    <string name="goclub_time_left_text">Harta karun bentar lagi hilang</string>
    <string name="akses_cepat">Akses Cepat</string>
    <string name="discount_description">Ada voucher nganggur nih</string>
    <string name="restoran_text">Restoran terdekat</string>
    <string name="promo_title_text">Nonton lengkap dan asik!</string>
    <string name="promo_desc_text">Nonton asik dan seru dimana aja sesuai keinginanmu cashback sampai 30%</string>
    <string name="finance_section">finance section</string>
    <string name="feature_section">feature section</string>
    <string name="promo_section">promo section</string>
    <string name="toolbar_section">toolbar section</string>
    <string name="bottom_nav_section">bottom nav section</string>
    <string name="beranda">Beranda</string>
    <string name="promo">Promo</string>
    <string name="pesanan">Pesanan</string>
    <string name="chat">Chat</string>

</resources>