<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp">
    <ImageView
        android:contentDescription="@string/bottom_nav_section"
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"/>
    <ImageButton
        android:contentDescription="@string/bottom_nav_section"
        android:id="@+id/beranda_icon"
        android:layout_width="@dimen/nav_icon"
        android:layout_height="@dimen/nav_icon"
        app:layout_constraintTop_toTopOf="@id/bottom_toolbar"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/beranda_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/promo_icon"
        android:src="@drawable/beranda_icon"/>
    <ImageButton
        android:contentDescription="@string/bottom_nav_section"
        android:id="@+id/promo_icon"
        android:layout_width="@dimen/nav_icon"
        android:layout_height="@dimen/nav_icon"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/discount_icon"
        app:tint="@color/black_text"
        app:layout_constraintTop_toTopOf="@id/beranda_icon"
        app:layout_constraintStart_toEndOf="@id/beranda_icon"
        app:layout_constraintEnd_toStartOf="@id/pesanan_icon"
        />
    <ImageButton
        android:contentDescription="@string/bottom_nav_section"
        android:id="@+id/pesanan_icon"
        android:layout_width="@dimen/nav_icon"
        android:layout_height="@dimen/nav_icon"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/pesanan_icon"
        app:layout_constraintTop_toTopOf="@id/beranda_icon"
        app:layout_constraintStart_toEndOf="@id/promo_icon"
        app:layout_constraintEnd_toStartOf="@id/chat_icon"/>
    <ImageButton
        android:contentDescription="@string/bottom_nav_section"
        android:id="@+id/chat_icon"
        android:layout_width="@dimen/nav_icon"
        android:layout_height="@dimen/nav_icon"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/chat_icon"
        app:layout_constraintTop_toTopOf="@id/beranda_icon"
        app:layout_constraintStart_toEndOf="@id/pesanan_icon"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/beranda_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beranda"
        android:textSize="@dimen/small_inside_text"
        android:textColor="@color/black_description"
        app:layout_constraintTop_toBottomOf="@id/beranda_icon"
        app:layout_constraintStart_toStartOf="@id/beranda_icon"
        app:layout_constraintEnd_toEndOf="@id/beranda_icon"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/promo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_description"
        android:textSize="@dimen/small_inside_text"
        app:layout_constraintTop_toTopOf="@id/beranda_text"
        app:layout_constraintBottom_toBottomOf="@id/beranda_text"
        app:layout_constraintStart_toStartOf="@id/promo_icon"
        app:layout_constraintEnd_toEndOf="@id/promo_icon"
        android:text="@string/promo"/>
    <TextView
        android:id="@+id/pesanan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_description"
        android:textSize="@dimen/small_inside_text"
        app:layout_constraintTop_toTopOf="@id/beranda_text"
        app:layout_constraintBottom_toBottomOf="@id/beranda_text"
        app:layout_constraintStart_toStartOf="@id/pesanan_icon"
        app:layout_constraintEnd_toEndOf="@id/pesanan_icon"
        android:text="@string/pesanan"/>
    <TextView
        android:id="@+id/chat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_description"
        android:textSize="@dimen/small_inside_text"
        app:layout_constraintTop_toTopOf="@id/beranda_text"
        app:layout_constraintBottom_toBottomOf="@id/beranda_text"
        app:layout_constraintStart_toStartOf="@id/chat_icon"
        app:layout_constraintEnd_toEndOf="@id/chat_icon"
        android:text="@string/chat"/>

</androidx.constraintlayout.widget.ConstraintLayout>